fix some bugs on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,7 +21,7 @@
 }
 
 /* Mobile */
-@media only screen and (hover: none) and (pointer: coarse){
+@media only screen and (max-width: 760px) {
     .app-cont {
         width: 100%;
         padding: 0 0 40px 0;
