--- a/src/app/comps/evolution-phase/evolution-phase.component.scss
+++ b/src/app/comps/evolution-phase/evolution-phase.component.scss
@@ -20,7 +20,7 @@
 }
 
 /* mobile */
-@media only screen and (hover: none) and (pointer: coarse){
+@media only screen and (max-width: 760px) {
     .evolution-cont {
         margin: 10px 5px;
     }
