--- a/src/app/comps/pokemon-detail/pokemon-detail.component.scss
+++ b/src/app/comps/pokemon-detail/pokemon-detail.component.scss
@@ -283,7 +283,7 @@
 
 
 /* Mobile */
-@media only screen and (hover: none) and (pointer: coarse){
+@media only screen and (max-width: 760px) {
   .modal-detail-back {
     display: none;
   }
@@ -324,7 +324,7 @@
       min-width: 100%;
 
       img {
-        max-height: none;
+        max-height: 60vh;
       }
     }
 
